# lifegame

./: Cargo.toml  README.md
.github/workflows/: release.yml  rust.yml
src/: cell.rs  field.rs  main.rs
