[package]
name = "life-game"
description = "Conway's Game of Life for TUI"
version = "0.1.3"
edition = "2021"
authors = ["crcrworks <crcr.works@gmail.com>"]
license = "MIT"

homepage = "https://crates.io/crates/life-game"
repository = "https://github.com/crcrworks/lifegame"

keywords = ["lifegame", "game", "simulation"]
categories = ["simulation"]


[dependencies]
crossterm = "0.28.1"
eyre = "0.6.12"
vector2d = "3.1.1"
